@@ -21,9 +21,6 @@
             <div>Read the online documentation</div>
           </a>
         </li>
-        <li class="news-item clearfix" ng-show="user.uid">
-          <div ng-include="'views/emailform.html'" style="padding:3px 20px;"></div>
-        </li>
       </ul>
     </li>
 
